# derpibooru-downloader

./: .gitignore  Cargo.toml  rust-toolchain.toml
src/: api.rs  config.rs  main.rs  models.rs
