[package]
name = "derpibooru-downloader"
version = "0.2.3"
edition = "2024"

[profile.release]
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "1"
const_format = "0.2"
dirs = "6"
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_path_to_error = "0.1"
simplelog = "0.12"

[dependencies.clap]
version = "4.5"
default-features = false
features = ["derive", "help", "std"]

[dependencies.reqwest]
version = "0.13"
default-features = false
features = [
    "blocking",
#    "brotli",
#    "deflate",
#    "http2",
#    "gzip",
    "json",
    "native-tls",
    "query",
#    "stream",
    "system-proxy",
#    "zstd",
]

[dependencies.toml]
version = "1"
default-features = false
features = ["parse", "serde"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
print_stdout = "deny"
print_stderr = "deny"
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"
